--- a/Desafios/d012/folhadeestilo.css
+++ b/Desafios/d012/folhadeestilo.css
@@ -1,3 +1,13 @@
+@charset "UFT-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -5,7 +15,8 @@
 
 html, body {
     background-color: antiquewhite;
-    min-height: 100vh;     
+    min-height: 100vh;
+    font-family: var(--fonte1);    
 }
 
 header {
@@ -20,6 +31,8 @@ header h1 {
     font-variant: small-caps;
     color: white;
     text-align: center;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header p {
@@ -64,12 +77,16 @@ section.transparente article {
 }
 
 article {
-    line-height: 2em;
+    width: fit-content;
     padding-left: 30px;
-    width: 400px;
+    font-family: var(--fonte3);
+    padding-right: 20px;
 }
 
 article p {
+    font-size: 3vw;
+    min-height: 13vh;
+    
 }
 
 #joaninha {
