--- a/Desafios/d012/folhadeestilo.css
+++ b/Desafios/d012/folhadeestilo.css
@@ -83,6 +83,8 @@ article {
     padding-left: 30px;
     font-family: var(--fonte3);
     padding-right: 20px;
+    width: 1124px;
+    margin: auto;
 }
 
 article p {
